Fix textarea gap

--- a/textarea-localizer.css
+++ b/textarea-localizer.css
@@ -37,6 +37,7 @@
     }
     
     &  .textarea-localizer-textarea{
+        display: block;
         width: 100%;
         padding: 7px;
         box-sizing: border-box;
